style.css
body{
    padding: 0;
    margin: 0;
     background-color: #fffdf5
}

header{
    text-align: center;
}

h1{
  font-family: "Trade Winds", system-ui;
  font-weight: 400;
  font-style: normal;
  color: #d4af37;
}

.introduction{
    text-align: center;
    font-size: larger;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #fff2b3;
    color: #333;
    padding: 15px;
    margin: 20px;
    border-radius: 12px;
    line-height: 1.6;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

table {
    margin: 20px auto;
    border-collapse: collapse;
    width: 70%;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }

  th {
      font-family: "Trade Winds", system-ui;
    background-color: #d4af37;
    color: #333;
    padding: 10px;
    font-size: larger;
  }

  td {
    padding: 10px;
    border: 1px solid #ddd;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
  }

  tr:nth-child(even) {
    background-color: #fff2b3;
  }

  form {
    width: 60%;
    margin: 20px auto;
    padding: 20px;
    background-color: #fffdf5;
    border: 2px solid gold;
    border-radius: 12px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  }

  input[type="date"] {
    width: 100%;
    padding: 8px;
    margin-top: 5px;
    border: 1px solid #ccc;
    border-radius: 6px;
  }

  input[type="radio"] {
    margin-right: 5px;
  }

  label {
    font-weight: bold;
  }

  button {
    margin-top: 15px;
    padding: 10px 15px;
    background-color: #d4af37;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    font-weight: bold;
    font-size: large;
  }

  button:hover {
    background-color: #e6c200;
  }

  button:active{
    background-color: #b8942e;
  }

  footer{
    text-align: center;
    padding: 20px 0;
    background-color: #fdde6c;
    color: #333;
    margin-top: 20px;
}   

#result {
  width: 60%;
  margin: 20px auto;
  padding: 20px;
  text-align: center;
  background-color: #fff2b3;
  border-radius: 12px;
  border: 2px solid #d4af37;
  font-family: 'Gill Sans', Calibri, sans-serif;
  font-size: large;
}

#akanName {
  font-size: 24px;
  font-weight: bold;
  color: #2f2f2f;
  font-family: "Trade Winds", system-ui;
}

#footer {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 14px;
    text-shadow: 0 2px 10px rgba(0,0,0,0.1);
    color: #333
  }

